# pipedoc

./: .gitignore  README.md  __main__.py  config.py  log.py  module.py  pyproject.toml
example/docs/: index.adoc
example/docs/modules/: build.adoc
example/docs/raw/: 00-basic.adoc
pipedoc/: __main__.py  app.py  config.py  docindex.py  module.py
