[tool.poetry]
name = "pipedoc"
version = "0.1.0"
description = ""
authors = ["rndmit <rndmit@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycli = {git = "https://github.com/rndmit/pycli.git", tag = "v0.0.0-ea1"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
